Added functions for remapping dataframe